tests/errors/undefined_type.bs
// Test: Should FAIL - using undefined struct type
fn main {
    Foo f = Foo { x: 1 }
}
